fixed layout issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -74,6 +74,7 @@ ul {
 }
 a {
   text-decoration: none;
+  color: var(--clr-primary-5);
 }
 
 h1,
@@ -557,13 +558,13 @@ Jobs
   background: transparent;
   border-color: transparent;
   text-transform: capitalize;
-  font-size: 1.25rem;
+  font-size: clamp(0.65rem, 2vw, 1.25rem);
   letter-spacing: var(--spacing);
   margin: 0 0.5rem;
   transition: var(--transition);
   cursor: pointer;
   padding: 0.25rem 0;
-  line-height: 1;
+  line-height: 1.5;
 }
 .job-btn:hover {
   color: var(--clr-primary-5);
@@ -578,6 +579,7 @@ Jobs
 }
 .job-info h3 {
   font-weight: 400;
+  margin-bottom: 0;
 }
 .job-info h4 {
   text-transform: uppercase;
@@ -586,6 +588,7 @@ Jobs
   display: inline-block;
   padding: 0.375rem 0.75rem;
   border-radius: var(--radius);
+  margin: 1rem 0;
 }
 .job-date {
   letter-spacing: var(--spacing);
@@ -608,7 +611,7 @@ Jobs
   .jobs-center {
     width: 90vw;
     display: grid;
-    grid-template-columns: 200px 1fr;
+    grid-template-columns: 340px 1fr;
     column-gap: 4rem;
   }
   .btn-container {
@@ -617,12 +620,15 @@ Jobs
   }
   .job-btn {
     margin-bottom: 1rem;
+    margin-right: auto;
   }
   .active-btn {
     box-shadow: -2px 0 var(--clr-primary-5);
+    padding-left: 0.5rem;
   }
   .job-btn:hover {
     box-shadow: -2px 0 var(--clr-primary-5);
+    padding-left: 0.5rem;
   }
 }
 
